--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
-name: story_view_updated
+name: story_view
 description: Display stories just like Whatsapp & Instagram. Can be used inline/inside ListView or Column just like Google News app. Comes with gestures to pause, forward & go to previous page.
-version: 1.0.0
-homepage: https://github.com/printjt/story_view
+version: 0.16.5
+homepage: https://github.com/blackmann/story_view
+publish_to: 'none'
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -10,9 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_cache_manager: ^3.4.1
-  rxdart: ^0.27.7
+  rxdart: ^0.28.0
   video_player: ^2.9.3
-  collection: ^1.19.0
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
